refactoring, tests in progress now